add: test debug